objects/Trainer__c.object
<CustomObject>
    <label>Trainer</label>
    <nameField>
        <label>Trainer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courses__c</fullName>
        <label>Courses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Courses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_In__c</fullName>
        <label>Time In</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Time_Out__c</fullName>
        <label>Time Out</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Time_Slots__c</fullName>
        <label>Time-Slots</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10-11 am</fullName>
                </value>
                <value>
                    <fullName>11-12 noon</fullName>
                </value>
                <value>
                    <fullName>12-1 pm</fullName>
                </value>
                <value>
                    <fullName>1-2 pm</fullName>
                </value>
                <value>
                    <fullName>2-3 pm</fullName>
                </value>
                <value>
                    <fullName>3-4 pm</fullName>
                </value>
                <value>
                    <fullName>4-5 pm</fullName>
                </value>
                <value>
                    <fullName>5-6 pm</fullName>
                </value>
                <value>
                    <fullName>6-7 pm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Account</label>
        <referenceTo>K_Employee__c</referenceTo>
        <relationshipLabel>Trainers</relationshipLabel>
        <relationshipName>Trainers</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>